--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import './assets/scss/common';
+
+body, * {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
